[gd_scene load_steps=4 format=3 uid="uid://b06rdooafyvuu"]

[ext_resource type="Script" path="res://actors/enemy_locker.gd" id="1_kcfk1"]
[ext_resource type="PackedScene" uid="uid://d0ka0dmgnnng2" path="res://character_models/locker.blend" id="2_05u2r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hf8xw"]
size = Vector3(0.806885, 1.19812, 0.610596)

[node name="EnemyLocker" type="StaticBody3D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 15
axis_lock_linear_y = true
script = ExtResource("1_kcfk1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59906, -0.0985107)
shape = SubResource("BoxShape3D_hf8xw")

[node name="LockerModel" parent="." instance=ExtResource("2_05u2r")]

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
